objects/tffa__DisclosureItem__c.object
<CustomObject>
    <description>Holds reference to a disclosure template.</description>
    <fields>
        <fullName>CZMultipleRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if the multiple disclosure are required</description>
        <label>Multiple Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ActionText__c</fullName>
        <description>The text in a disclosure link.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Active__c</fullName>
        <description>Reports whether the configuration is active for consumption. Derived from disabled state and template active state.</description>
        <formula>tffa__Disabled__c = False &amp;&amp; tffa__Template__r.tffa__Active__c = True</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Checklist__c</fullName>
        <description>Reference to parent checklist.</description>
        <label>Checklist</label>
        <referenceTo>tffa__DisclosureChecklist__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the configuration as unavailable for consumption.</description>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__GroupCode__c</fullName>
        <description>Unique group code to determine grouped disclosure items within a checklist</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsBusinessConfiguration__c</fullName>
        <description>Business configuration marker.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Business Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Label__c</fullName>
        <description>Display text that appears alongside disclosure link.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a mandatory or optional disclosure.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to disclosure template</description>
        <label>Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Template not active.</errorMessage>
            <filterItems>
                <field>tffa__DisclosureTemplate__c.tffa__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__DisclosureTemplate__c</referenceTo>
        <relationshipLabel>Disclosure Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Disclosure Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disclosure Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>